Update README for Y-Edit
Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>