@@ -1,69 +1,54 @@
-<p align="center">
-  <img src="https://raw.githubusercontent.com/Stirling-Tools/Stirling-PDF/main/docs/stirling.png" width="80" alt="Stirling PDF logo">
-</p>
+# Y-Edit
 
-<h1 align="center">Stirling PDF - The Open-Source PDF Platform</h1>
+Self-contained Windows PDF editor with 50+ tools. Forked from [Stirling-PDF](https://github.com/Stirling-Tools/Stirling-PDF) (MIT-licensed core).
 
-Stirling PDF is a powerful, open-source PDF editing platform. Run it as a personal desktop app, in the browser, or deploy it on your own servers with a private API. Edit, sign, redact, convert, and automate PDFs without sending documents to external services.
+## Key Differences from Stirling-PDF
 
-<p align="center">
-  <a href="https://hub.docker.com/r/stirlingtools/stirling-pdf">
-    <img src="https://img.shields.io/docker/pulls/frooodle/s-pdf" alt="Docker Pulls">
-  </a>
-  <a href="https://discord.gg/HYmhKj45pU">
-    <img src="https://img.shields.io/discord/1068636748814483718?label=Discord" alt="Discord">
-  </a>
-  <a href="https://scorecard.dev/viewer/?uri=github.com/Stirling-Tools/Stirling-PDF">
-    <img src="https://api.scorecard.dev/projects/github.com/Stirling-Tools/Stirling-PDF/badge" alt="OpenSSF Scorecard">
-  </a>
-  <a href="https://github.com/Stirling-Tools/stirling-pdf">
-    <img src="https://img.shields.io/github/stars/stirling-tools/stirling-pdf?style=social" alt="GitHub Repo stars">
-  </a>
-</p>
+- **MS Office instead of LibreOffice** — Uses your already-installed Microsoft Office for document conversions via COM automation (documents4j). No 500MB LibreOffice bundle needed.
+- **Self-contained installer** — All tools bundled: custom JRE, QPDF, Tesseract OCR, Ghostscript, embedded Python + weasyprint/opencv/ocrmypdf.
+- **Desktop-first** — Tauri (Rust) shell with native WebView2. No browser needed.
+- **No SaaS/auth** — Pure local desktop app. No login, no cloud, no telemetry.
 
-![Stirling PDF - Dashboard](images/home-light.png)
+## Features
 
-## Key Capabilities
+- Merge, split, rotate, reorder PDF pages
+- X.509 certificate signing (PEM, PKCS12, JKS)
+- Digital signatures, watermarks, stamps
+- OCR (Tesseract + OCRmyPDF)
+- Office to PDF (Word, Excel, PowerPoint)
+- PDF to Word/DOCX conversion
+- HTML/URL to PDF (Weasyprint)
+- Compress, repair (QPDF)
+- PDF/A archival conversion (Ghostscript)
+- Encrypt/decrypt, permissions
+- Redaction, sanitization
+- Image extraction and scan processing
+- Metadata editing, form filling
+- And 30+ more tools...
 
-- **Everywhere you work** - Desktop client, browser UI, and self-hosted server with a private API.
-- **50+ PDF tools** - Edit, merge, split, sign, redact, convert, OCR, compress, and more.
-- **Automation & workflows** - No-code pipelines direct in UI with APIs to process millions of PDFs.
-- **Enterprise‑grade** - SSO, auditing, and flexible on‑prem deployments.
-- **Developer platform** - REST APIs available for nearly all tools to integrate into your existing systems.
-- **Global UI** - Interface available in 40+ languages.
+## Requirements
 
-For a full feature list, see the docs: **https://docs.stirlingpdf.com**
+- Windows 10/11
+- Microsoft Office (Word, Excel, PowerPoint)
 
-## Quick Start
+## Building
 
 ```bash
-docker run -p 8080:8080 docker.stirlingpdf.com/stirlingtools/stirling-pdf
+# Build Spring Boot JAR
+./gradlew :stirling-pdf:bootJar -x test
+
+# Create custom JRE
+jlink --no-header-files --no-man-pages --compress=zip-6 \
+  --add-modules java.base,java.compiler,java.desktop,java.instrument,java.logging,java.management,java.naming,java.net.http,java.prefs,java.rmi,java.scripting,java.security.jgss,java.security.sasl,java.sql,java.transaction.xa,java.xml,java.xml.crypto,jdk.crypto.ec,jdk.crypto.cryptoki,jdk.unsupported \
+  --output frontend/src-tauri/runtime/jre
+
+# Install frontend deps
+cd frontend && npm ci
+
+# Build Tauri app
+npx tauri build --bundles nsis
 ```
-
-Then open: http://localhost:8080
-
-For full installation options (including desktop and Kubernetes), see our [Documentation Guide](https://docs.stirlingpdf.com/#documentation-guide).
-
-## Resources
-
-- [**Documentation**](https://docs.stirlingpdf.com)
-- [**Homepage**](https://stirling.com)
-- [**API Docs**](https://registry.scalar.com/@stirlingpdf/apis/stirling-pdf-processing-api/)
-- [**Server Plan & Enterprise**](https://docs.stirlingpdf.com/Paid-Offerings)
-
-## Support
-
-- **Community** [Discord](https://discord.gg/HYmhKj45pU)
-- **Bug Reports**: [Github issues](https://github.com/Stirling-Tools/Stirling-PDF/issues)
-
-## Contributing
-
-We welcome contributions! Please see [CONTRIBUTING.md](CONTRIBUTING.md) for guidelines.
-
-For development setup, see the [Developer Guide](DeveloperGuide.md).
-
-For adding translations, see the [Translation Guide](devGuide/HowToAddNewLanguage.md).
 
 ## License
 
-Stirling PDF is open-core. See [LICENSE](LICENSE) for details.
+MIT — see [LICENSE](LICENSE)
